--- a/ERCS/erc-7984.md
+++ b/ERCS/erc-7984.md
@@ -8,6 +8,7 @@ status: Draft
 type: Standards Track
 category: ERC
 created: 2025-07-03
+requires: 165
 ---
 
 ## Abstract
@@ -28,6 +29,8 @@ The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "S
 - All amounts in this ERC are pointer based amounts represented by `bytes32` pointers unless otherwise specified. The resolution and manipulation of these pointers is implementation specific.
 
 ### Token
+
+Smart contracts implementing the ERC-7984 standard MUST implement the ERC-165 `supportsInterface` function and MUST return the constant value `true` if `0x4958f2a4` is passed through the `interfaceID` argument.
 
 ### Methods
 
