--- a/ERCS/erc-7984.md
+++ b/ERCS/erc-7984.md
@@ -30,7 +30,7 @@ The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "S
 
 ### Token
 
-Smart contracts implementing the ERC-7984 standard MUST implement the ERC-165 `supportsInterface` function and MUST return the constant value `true` if `0x4958f2a4` is passed through the `interfaceID` argument.
+Smart contracts implementing the ERC-7984 standard MUST implement ERC-165. The `supportsInterface` function MUST return `true` if `0x4958f2a4` is passed through the `interfaceID` argument.
 
 ### Methods
 
